--- a/src/style/aboutus.css
+++ b/src/style/aboutus.css
@@ -98,4 +98,67 @@ a:active {
 }
 .backgroundLemons-four img, .smallBackgroundLemons-four img {
   width: 150px;
-}/*# sourceMappingURL=variables.css.map */
+}
+
+.AboutUs {
+  width: 100%;
+  margin: 105px auto 0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.AboutUs-container {
+  z-index: 2;
+  margin: 0 auto 95px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  max-width: 900px;
+  background-color: #FFFDF0;
+  border-radius: 8px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.AboutUs-container h1 {
+  font-family: "Reenie Beanie", cursive;
+  font-size: 50px;
+  font-weight: 600;
+  text-align: center;
+  word-spacing: -5px;
+  width: 100%;
+  margin: 40px auto 10px;
+}
+.AboutUs-container img {
+  width: 140px;
+  margin: 20px auto 0;
+  border-radius: 8px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.AboutUs-container-intro-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 80%;
+  margin-bottom: 20px;
+}
+.AboutUs-container-intro-text h2 {
+  font-size: 22px;
+  margin: 20px 0 0;
+  font-weight: 700;
+}
+.AboutUs-container-intro-text h2 img {
+  width: 30px;
+  margin: 0 0 -6px 0;
+  box-shadow: none;
+}
+.AboutUs-container-intro-text p {
+  font-family: "Dosis", sans-serif;
+  font-size: 18px;
+  font-weight: 500;
+  display: inline-block;
+  margin: 20px 0 0 0;
+}
+.AboutUs-container-intro-text p:first-child {
+  margin-top: 0;
+}/*# sourceMappingURL=aboutus.css.map */
