--- a/src/style/menu.scss
+++ b/src/style/menu.scss
@@ -5,30 +5,34 @@
     width: 55px;
     background-color: $dark-green;
     position: fixed;
-    bottom: 10px;
-    right: 10px;
+    top: 20px;
+    right: 20px;
     padding: 0;
     margin: 0;
-    border-radius: 8px;
+    border-radius: $border-radius;
     display: flex;
     align-items: center;
     cursor: pointer;
-    box-shadow: $shadow;
     z-index: 3;
 
     &-cross {
         width: 100%;
-        height: 90%;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
         z-index: 3;
+        border-radius: $border-radius;
+        background-color: transparent;
+        box-shadow: $shadow;
+        border-width: 0;
+        cursor: pointer;
 
         &-line {
             width: 35px;
             height: 4px;
-            border-radius: 8px;
+            border-radius: $border-radius;
             background-color: white;
             box-shadow: $shadow;
         }
@@ -44,15 +48,16 @@
     .visible {
         display: flex;
         position: fixed;
-        right: 10px;
-        bottom: 60px;
+        right: 20px;
+        top: 75px;
         background-color: $light-green;
-        border-radius: 8px;
-        width: 70%;
+        border-radius: $border-radius;
+        width: 80%;
+        max-width: 310px;
         height: fit-content;
         flex-direction: column;
         align-items: center;
-        padding: 40px 0 15px;
+        padding: 30px 0 10px;
         box-shadow: $shadow;
         z-index: 300;
         opacity: 1;
@@ -61,11 +66,11 @@
         .burger-menu-container-item {
             list-style: none;
             width: 90%;
-            height: 55px;
-            border-radius: 8px;
+            height: 45px;
+            border-radius: $border-radius;
             background-color: $dark-green;
             box-shadow: $shadow;
-            margin-bottom: 50px;
+            margin-bottom: 25px;
 
             &-navLink {
                 display: flex;
@@ -77,28 +82,28 @@
                 }
 
                 #posterIcon {
-                    width: 85px; 
-                    margin-left: 0;
+                    width: 65px; 
+                    margin: -5px 0 0 0;
                 }
 
                 #crochetIcon {
-                    width: 85px; 
-                    margin-left: 5px;
+                    width: 70px; 
+                    margin: -15px 0 0 5px;
                 }
 
                 #contactIcon {
-                    width: 90px; 
-                    margin: 9px 0 0 5px;
+                    width: 70px; 
+                    margin: -3px 0 0 5px;
                 }
 
                 #aboutIcon {
-                    width: 100px; 
-                    margin-left: 0;
+                    width: 80px; 
+                    margin: -10px 0 0 0;
                 }
 
                 p {
                     color: white;
-                    margin-left: 95px;
+                    margin: -13px 0 0 95px;
                     font-size: 18px;
                 }
             }
@@ -111,9 +116,42 @@
 
         .burger-menu-container-line {
             width: 90%;
-            height: 3px;
+            height: 4px;
             background-color: $dark-green;
-            border-radius: 8px;
+            border-radius: $border-radius;
+        }
+
+        .burger-menu-container-bottomInfo {
+            h5 {
+                text-align: center;
+                margin: 10px 0 10px 0;
+                font-size: 18px;
+                font-weight: 600;
+            }
+            
+            p {
+                margin: 0 auto 10px;
+                width: 90%;
+            }
+
+            address {
+                margin: -10px auto 10px;
+                width: 90%;
+            }
+
+            a {
+                color: black;
+            }
+
+            #email {
+                margin-top: -10px;
+            }
+
+            h4 {
+                text-align: center;
+                margin: 0 auto 10px;
+                font-size: 20px;
+            }
         }
 
         .burger-menu-container-soMe {
@@ -122,23 +160,18 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            
-            p {
-                color: black;
-                font-size: 18px;
-                margin: 10px auto;
-            }
+            border-radius: $border-radius;
 
             img {
                 height: 40px;
                 box-shadow: $shadow;
-                border-radius: 12px;
+                border-radius: 11px;
             }
         }
     }
 
     .clicked:nth-child(1){
-        transform: rotate(45deg) translate(10px, 8px);
+        transform: rotate(45deg) translate(10px, 10px);
         transition: ease-out 0.2s;
     }
     
@@ -148,7 +181,7 @@
     }
     
     .clicked:nth-child(3){
-        transform: rotate(135deg) translate(-10px, 9px);
+        transform: rotate(135deg) translate(-10px, 10px);
         transition: ease-out 0.2s;
     }
 
